# multidrop

./: CMakeLists.txt  I2C_slave.c  I2C_slave.h  README.txt  generic-gcc-avr.cmake  main.c  twiddle.h  uart.c  uart.h
